--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+# $Date: 2023-02-17 21:51:59+09 $
+# $Revision: 1.3 $
+
+# This file
+.gitignore
+
+# MacOS Finder
+.DS_Store
 .Data_Store
+
+# RCS
+RCS/
+
+# Backup files produced by Emacs, etc.
+*~
